--- a/package.json
+++ b/package.json
@@ -3,10 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.9",
+    "@material-ui/core": "^4.4.0",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.5",
+    "@material-ui/styles": "^4.3.3",
+    "date-fns": "^2.0.1",
+    "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
+    "material-ui": "^0.20.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-facebook-login": "^4.1.1",
+    "react-firebaseui": "^4.0.0",
+    "react-google-login": "^5.0.5",
+    "react-scripts": "3.1.1",
+    "react-with-firebase-auth": "^1.0.4",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
