--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-<<<<<<< HEAD
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
     "firebase-tools": "^7.3.1",
@@ -11,10 +10,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
-=======
+    "react-scripts": "3.1.1",
     "@date-io/date-fns": "^1.3.9",
-    "@material-ui/core": "^4.4.0",
     "@material-ui/pickers": "^3.2.5",
     "@material-ui/styles": "^4.3.3",
     "date-fns": "^2.0.1",
