--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "date-fns": "^2.0.1",
     "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
-    "material-table": "^1.50.0",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.2",
     "react": "^16.9.0",
@@ -44,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "material-table": "^1.50.0"
   }
 }
