--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-with-firebase-auth": "^1.0.4",
+    "recharts": "^1.7.1",
     "yarn": "^1.17.3"
   },
   "scripts": {
