--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/pickers": "^3.2.5",
     "@material-ui/styles": "^4.3.3",
+    "axios": "^0.19.0",
     "date-fns": "^2.0.1",
     "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
