Agrego las functions al repositorio

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
-    "default": "agabooivan ",
     "staging": "agabooivan",
-    "agaboopruebas": "agabooivan"
+    "agaboopruebas": "agabooivan",
+    "testing-dforce": "agaboodforce",
+    "default": "agaboodforce"
   }
 }
