--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ yarn.lock
 
 # config Firebase
 /src/config/firebase-config.js
+### Firebase ###
+.idea
+**/node_modules/*
+**/.firebaserc
+
+### Firebase Patch ###
+.runtimeconfig.json
+.firebase/
