--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^4.4.1",
@@ -21,6 +23,7 @@
     "react-google-login": "^5.0.5",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-test-renderer": "^16.9.0",
     "react-with-firebase-auth": "^1.0.4",
     "recharts": "^1.7.1",
     "yarn": "^1.17.3"
@@ -47,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "material-table": "^1.50.0"
+    "@testing-library/react": "^9.1.4",
+    "material-table": "^1.50.0",
+    "react-test-utils": "0.0.1"
   }
 }
