--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,7 @@
 {
   "projects": {
-    "staging": "agabooivan",
-    "agaboopruebas": "agabooivan",
-    "testing-dforce": "agaboodforce",
-    "default": "agaboodforce"
+    "default": "agabooivan",
+    "agaboo": "agabooivan",
+    "agabooivan": "agabooivan"
   }
 }
