--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -6,7 +6,7 @@
   "plugins": [
     "promise"
   ],
-  "extends": "eslint:recommended",
+  "extends": ["eslint:recommended"],
   "rules": {
     // Removed rule "disallow the use of console" from recommended eslint rules
     "no-console": "off",
