--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,7 @@
 {
   "projects": {
-    "default": "agabooivan ",
-    "staging": "agabooivan",
-    "agaboopruebas": "agabooivan"
+    "default": "agaboofront-francisco ",
+    "staging": "agaboofront-francisco",
+    "agaboopruebas": "agaboofront-francisco"
   }
 }
