--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/pickers": "^3.2.5",
     "@material-ui/styles": "^4.3.3",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.1",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.2",
     "react": "^16.9.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.0.0",
