--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-test-renderer": "^16.9.0",
     "react-with-firebase-auth": "^1.0.4",
     "recharts": "^1.7.1",
+    "underscore": "^1.9.1",
     "yarn": "^1.17.3"
   },
   "scripts": {
