--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.9",
-    "@material-ui/core": "^4.4.1",
-    "@material-ui/icons": "^4.4.1",
-    "@material-ui/pickers": "^3.2.5",
-    "@material-ui/styles": "^4.3.3",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.5.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
     "date-fns": "^2.0.1",
     "eslint-plugin-react-hooks": "^2.0.1",
     "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
+    "formik": "^1.5.8",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.2",
     "react": "^16.9.0",
@@ -26,7 +27,8 @@
     "react-scripts": "3.1.1",
     "react-with-firebase-auth": "^1.0.4",
     "recharts": "^1.7.1",
-    "yarn": "^1.17.3"
+    "yarn": "^1.17.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
