--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.0.0",
     "react-google-login": "^5.0.5",
+    "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.9.0",
     "react-with-firebase-auth": "^1.0.4",
     "recharts": "^1.7.1",
     "underscore": "^1.9.1",
+    "use-force-update": "^1.0.7",
     "yarn": "^1.17.3",
     "yup": "^0.27.0"
   },
