--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-firebaseui": "^4.0.0",
     "react-google-login": "^5.0.5",
     "react-material-ui-form-validator": "^2.0.9",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-test-renderer": "^16.9.0",
