--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^1.5.8",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.2",
+    "puppeteer": "^1.20.0",
     "react": "^16.9.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
