--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^6.6.0",
     "firebase-tools": "^7.3.1",
     "formik": "^1.5.8",
+    "http2": "^3.3.7",
     "material-ui": "^0.20.2",
     "mdbreact": "^4.19.2",
     "puppeteer": "^1.20.0",
