--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.8",
     "react-test-renderer": "^16.9.0",
     "react-with-firebase-auth": "^1.0.4",
     "recharts": "^1.7.1",
