--- a/package.json
+++ b/package.json
@@ -3,39 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "@date-io/date-fns": "^1.3.9",
-    "@material-ui/core": "^4.5.0",
-    "@material-ui/icons": "^4.4.3",
-    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "@material-ui/styles": "^4.5.0",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.19.0",
-    "date-fns": "^2.0.1",
-    "eslint-plugin-react-hooks": "^2.0.1",
+    "date-fns": "^2.6.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "firebase": "^6.6.0",
-    "firebase-tools": "^7.3.1",
+    "firebase-tools": "^7.6.1",
     "formik": "^1.5.8",
     "http2": "^3.3.7",
     "material-ui": "^0.20.2",
-    "mdbreact": "^4.19.2",
+    "mdbreact": "^4.21.1",
+    "npm-check-updates": "^3.1.25",
     "puppeteer": "^1.20.0",
-    "react": "^16.9.0",
+    "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.11.0",
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.0.0",
-    "react-google-login": "^5.0.5",
+    "react-google-login": "^5.0.6",
     "react-material-ui-form-validator": "^2.0.9",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
-    "react-test-renderer": "^16.9.0",
-    "react-with-firebase-auth": "^1.0.4",
-    "recharts": "^1.7.1",
+    "react-test-renderer": "^16.11.0",
+    "react-with-firebase-auth": "^1.1.0",
+    "recharts": "^1.8.5",
     "underscore": "^1.9.1",
     "use-force-update": "^1.0.7",
-    "yarn": "^1.17.3",
+    "yarn": "^1.19.1",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -60,8 +61,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^9.1.4",
-    "material-table": "^1.50.0",
+    "@testing-library/react": "^9.3.0",
+    "material-table": "^1.53.0",
     "react-test-utils": "0.0.1"
   }
 }
