--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "react-material-ui-form-validator": "^2.0.9",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
+    "react-spinners-kit": "^1.9.0",
     "react-test-renderer": "^16.11.0",
     "react-with-firebase-auth": "^1.1.0",
     "recharts": "^1.8.5",
+    "styled-components": "^4.4.0",
     "underscore": "^1.9.1",
     "use-force-update": "^1.0.7",
     "yarn": "^1.19.1",
