--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
+    "react-select": "^3.0.8",
     "react-spinners-kit": "^1.9.0",
     "react-test-renderer": "^16.11.0",
     "react-with-firebase-auth": "^1.1.0",
