Agrego Chip /ModulsOrder/Ready/CompleteOrder

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^1.5.8",
     "http2": "^3.3.7",
     "material-ui": "^0.20.2",
+    "material-ui-chip-input": "^2.0.0-beta.1",
     "mdbreact": "^4.21.1",
     "npm-check-updates": "^3.1.25",
     "puppeteer": "^1.20.0",
@@ -34,6 +35,7 @@
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
     "react-spinners-kit": "^1.9.0",
+    "react-super-responsive-table": "^5.1.1",
     "react-test-renderer": "^16.11.0",
     "react-with-firebase-auth": "^1.1.0",
     "recharts": "^1.8.5",
