--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.6.0",
     "eslint-plugin-react-hooks": "^2.2.0",
     "firebase": "^6.6.0",
+    "firebase-functions": "^3.3.0",
     "firebase-tools": "^7.6.1",
     "formik": "^1.5.8",
     "http2": "^3.3.7",
