--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@date-io/date-fns": "^1.3.9",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.31",
     "@material-ui/pickers": "^3.2.7",
     "@material-ui/styles": "^4.5.0",
     "autosuggest-highlight": "^3.1.1",
