--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sonarqube": "sonar-scanner"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,6 +74,7 @@
     "jest-puppeteer": "^4.3.0",
     "material-table": "^1.53.0",
     "puppeteer": "^1.20.0",
-    "react-test-utils": "0.0.1"
+    "react-test-utils": "0.0.1",
+    "sonar-scanner": "^3.1.0"
   }
 }
