Comienzo a errores de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,5 @@
-sonar.projectKey=sonar-agaboo-primero
-sonar.projectName=sonar-agaboo-primero
-sonar.projectVersion=3.1.0
+sonar.projectKey=agaboo-key
+sonar.organization=instancia-sonar-agaboo
 sonar.sources=src
-sonar.exclusions=src/utils/constants/*.js, src/lib/**.*, src/assets/**.*, src/registerServiceWorker.js, src/**/*.spec.js, src/**/index.js
-sonar.sourceEncoding=UTF-8
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.host.url=https://sonarcloud.io
+sonar.login=3020618db5f250caa0473ba562956d2c34a8fbca 
