Intento de  integracion de test a sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,9 @@
 sonar.projectKey=agaboo-key
 sonar.organization=instancia-sonar-agaboo
 sonar.sources=src
+sonar.projectVersion=3.1.0
+sonar.exclusions=**/node_modules/**
+sonar.tests=src/__tests__
+sonar.test.inclusions=**/*.test.js
 sonar.host.url=https://sonarcloud.io
 sonar.login=3020618db5f250caa0473ba562956d2c34a8fbca 
