Contador de productos disponibles funcionando

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,3 +7,4 @@ sonar.tests=src/__tests__
 sonar.test.inclusions=**/*.test.js
 sonar.host.url=https://sonarcloud.io
 sonar.login=3020618db5f250caa0473ba562956d2c34a8fbca 
+sonar.cpd.js.minimumLines=15
