Algunas modificaciones para Gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,11 @@ image: node:latest
 stages:
   - deploy
 
+test_variable:
+script:
+  - echo $FIREBASE_TOKEN # calls a predefined variable
+  - echo $TEST # calls a custom variable of type `env_var`
+
 cache:                  
   paths:                
     - node_modules/     
