--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,11 +21,12 @@ deploy-prod:
     - master
   script:
     - echo $FIREBASE_TOKEN # calls a predefined variable
+    - echo $FIREBASE_CONFIG_GITLAB # calls a predefined variable
     - echo $TEST # calls a custom variable of type `env_var`
-    - npm install
+    #- npm install
     #- npm test
-    - npm audit fix
-    - npm install build
-    - npm run build
-    - firebase use AgabooDforce --token $FIREBASE_TOKEN
-    - firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID" --token $FIREBASE_TOKEN
+    #- npm audit fix
+    #- npm install build
+    #- npm run build
+    #- firebase use AgabooDforce --token $FIREBASE_TOKEN
+    #- firebase deploy --only hosting -m "Pipe $CI_PIPELINE_ID Build $CI_BUILD_ID" --token $FIREBASE_TOKEN
