--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "npm-check-updates": "^3.1.25",
     "react": "^16.11.0",
     "react-autosuggest": "^9.4.3",
+    "react-bullet-status": "0.0.2",
     "react-dom": "^16.11.0",
     "react-draggable": "^4.1.0",
     "react-facebook-login": "^4.1.1",
