--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-facebook-login": "^4.1.1",
     "react-firebaseui": "^4.0.0",
     "react-google-login": "^5.0.6",
+    "react-google-maps": "^9.4.5",
     "react-material-ui-form-validator": "^2.0.9",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
