--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-select": "^3.0.8",
+    "react-share": "^3.0.1",
     "react-spinners-kit": "^1.9.0",
     "react-super-responsive-table": "^5.1.1",
     "react-test-renderer": "^16.11.0",
