--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-tools": "^7.6.1",
     "formik": "^1.5.8",
     "http2": "^3.3.7",
+    "lodash": "^4.17.15",
     "material-ui": "^0.20.2",
     "material-ui-chip-input": "^2.0.0-beta.1",
     "mdbreact": "^4.21.1",
