--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-google-login": "^5.0.6",
     "react-google-maps": "^9.4.5",
     "react-material-ui-form-validator": "^2.0.9",
+    "react-places-autocomplete": "^7.2.1",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
